# BridgeSQL

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  mcp_config.json  pyproject.toml  requirements.txt  run_bridgesql_mcp.cmd
.claude/: settings.local.json
TO_BE_DELETED/: Dockerfile  debug_log.txt  entrypoint.sh  pyvenv.cfg
TO_BE_DELETED/data/: .chat_history
TO_BE_DELETED/data/benchmark/: ablation_20260303_233240.json  ablation_20260303_234657.json  ablation_20260303_235737.json  ablation_20260304_002507.json  ablation_20260304_011559.json  result_20260303_225357.json
bridgesql/: __init__.py  cli.py  server.py  state.py
bridgesql/db/: connector.py  sampler.py
bridgesql/engine/: sql_generator.py
bridgesql/rag/: retriever.py
bridgesql/resources/: __init__.py
bridgesql/semantic/: catalog.py  generator.py
bridgesql/tools/: __init__.py  catalog.py  context.py  examples.py  sql.py
data/: benchmark_qa.json
data/benchmark/: ablation_20260303_230151.json  ablation_20260304_005658.json
data/catalog/: Chinook_AutoIncrement_catalog.json  weld_db_catalog.json
data/conversation/: default.json
data/feedback/: feedback.jsonl  query_logs.jsonl
docs/: SLACK_SETUP.md
semantic_engine/: config.py
semantic_engine/db/: connector.py  schema_extractor.py
semantic_engine/engine/: __init__.py  sql_generator.py
semantic_engine/rag/: retriever.py
semantic_engine/resources/: __init__.py
semantic_engine/semantic/: __init__.py
semantic_engine/tools/: catalog.py  examples.py
src/semantic_engine/: benchmark.py  cli.py  conversation.py  feedback.py  formatters.py  server.py  slack_bot.py  state.py  tui.py  visualization.py
src/semantic_engine/engine/: intent_guard.py  validator.py
(+15 files in other folders)
